--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   server:
     build: ./server
+    container_name: blog-server
     restart: always
     env_file:
       - ./server/.env
@@ -11,6 +12,7 @@ services:
 
   client:
     build: ./client
+    container_name: blog-client
     restart: always
     env_file:
       - ./client/.env
